# iris-glog-fork

./: .clang-format  .gitignore  LICENCE.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  activate.sh  docker-compose.yml  pyproject.toml  questions.txt  redo.sh  setup.py  test_alternative_creation.py  test_lifetimes.py
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: examples-ci.yml  lint.yml
.glog/: glog-scan.sarif
apptainer/: build.sh  iris.def  jupyter.sh  run.sh  triton.def
benchmark/: benchmark.py
csrc/finegrained_alloc/: build.sh  finegrained_allocator.hip
dataset/: mini.json  mini_v1.json  mini_v2.json  mini_v2_w_tiles.json
dist_gemm/: all_reduce.py  all_reduce_dist_gemm_A.py  all_reduce_dist_gemm_B.py  run.sh
dist_gemm/notime/: all_gather_dist_gemm.py  all_gather_dist_gemm_0.py  all_reduce_dist_gemm_0.py
docker/: Dockerfile  build.sh  run.sh
docs/: CONTRIBUTING.md  DEVCLOUD.md  FINEGRAINED_OVERLAP.md  P2P.md  PROGRAMMING_MODEL.md  SETUP_ALTERNATIVES.md
examples/: README.md
examples/00_load/: README.md  load_bench.py
examples/01_store/: README.md  store_bench.py
examples/02_all_load/: README.md  all_load_bench.py
examples/02_gemm_all_reduce/: benchmark.py  gemm.py  gemm_all_reduce.py  matmul_wrapper.py
examples/03_all_store/: README.md  all_store_bench.py
examples/03_gemm_all_scatter/: benchmark.py  gemm_all_scatter.py  matmul_wrapper.py  validation.py
examples/04_atomic_add/: README.md  atomic_add_bench.py
examples/04_message_passing/: message_passing.py
examples/05_atomic_xchg/: README.md  atomic_xchg_bench.py
examples/05_gemm_all_scatter/: benchmark.py
examples/06_gemm_all_reduce_atomics/: benchmark.py
examples/06_gemm_atomics_all_reduce/: matmul_wrapper.py
examples/06_message_passing/: message_passing_load_store.py  message_passing_put.py
examples/07_gemm_all_scatter/: benchmark.py  gemm_all_scatter.py  matmul_wrapper.py
examples/07_gemm_one_shot_all_reduce/: matmul_wrapper.py
examples/08_gemm_atomics_all_reduce/: benchmark.py
examples/09_gemm_one_shot_all_reduce/: benchmark.py  gemm_one_shot_all_reduce.py
examples/10_flash_decode/: README.md  all_gather_layer.py  all_gather_layer_fused.py  all_gather_push_kernel.py  compare_results_log.txt  decode_kernels.py  final_report.txt  rccl_perf_results_log.txt  sp_flash_decode_layer.py  sp_flash_decode_layer_2.py  sp_flash_decode_layer_3.py  sp_flash_decode_layer_4.py  sp_flash_decode_layer_iris.py  sp_flash_decode_layer_iris_fused.py  sp_flash_decode_layer_iris_fused_full.py  sp_flash_decode_layer_iris_no_wait.py  sp_flash_decode_layer_mpi.py  sp_flash_decode_layer_rccl.py  sp_flash_decode_layer_rccl_2.py  test_all_gather.py  test_all_gather_2.py  test_decode_attn.py  test_flash_decode.py  test_flash_decode_2.py  test_flash_decode_3.py  test_flash_decode_rccl.py  test_indirect_gather.py  test_mpi_all_gather.py  test_rccl_all_gather.py  test_softmax.py  test_softmax_2.py  test_sp_fd.py  test_sp_fd_2.py  test_sp_fd_3.py  test_sp_fd_4.py  test_sp_flash_decode.py  test_stages.py  utils.py
examples/10_gemm_all_scatter_wg_specialization/: benchmark.py  gemm_all_scatter_wg_specialization.py  matmul_wrapper.py
examples/11_all_gather_gemm/: ag_gemm.py  ag_gemm_separate.py  all_gather_gemm.py  all_gather_gemm_2.py  all_gather_gemm_fused.py  benchmark.py  test_all_gather.py  validate.py
examples/11_gemm_all_scatter_producer_consumer/: benchmark.py  gemm_all_scatter_producer_consumer.py  matmul_wrapper.py
examples/12_flash_decode/: decode_kernels.py  fd_layer_iris_fused_full.py  test_flash_decode.py  test_flash_decode_rccl.py
hip/: CMakeLists.txt  main.hip  rebuild  test.sh
hipShim/: README.md  hip_shim.cpp
iris/: README.md  __init__.py  _hip.py  _mpi_helpers.py  hip.py  iris.py  util.py
notebooks/: visualize.ipynb  visualize_tiles.ipynb
pyrocSHMEM/: README.md  __init__.py  _hip.py  finegrained_allocator.hip  pyrocSHMEM.py
python/: all_gather.py  all_to_all.py  device.py  hip.py  hipmalloc.py  ipc copy.py  ipc.ipynb  mpi_helpers.py  pyrocSHMEM.py  slicing_test.py  test_handle.py  test_mpi.py  test_mpi_hip.py
reference/: all_gather.py  all_reduce.py  run.sh
scripts/: build_dependencies.sh  link_bandwidth.py  profile.sh  profile_reference.sh
stream-k/: all_reduce.py  all_scatter.py  benchmark.py  communication.py  gemm.py  matmul_wrapper.py  one_shot.py  profile.sh  repro.sh  run.sh  shmem_run.sh  utils.py  validation.py
streamk/: distributed_gemm.py  example.py  persistent_gemm.py  profile.sh  shmem_distributed_gemm.py  shmem_persistent_gemm.py  shmem_run.sh
streamk-old/: example.py  nccl_all_reduce_distributed_gemm.py  nccl_run.sh  persistent_gemm.py  profile.sh
triton/: 01-vector-add.py  activate.sh  external.ipynb  hip.py  pyrocSHMEM.py  run.sh  shmem_demo.py  shmem_mp.py  shmem_put.py
(+113 files in other folders)
