# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Advanced Micro Devices, Inc. All rights reserved.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "iris.__version__"}

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["iris"]

[project]
name = "Iris"
version = "0.1.0"
description = "Python- and Triton-based library that provide SHMEM-like RDMA support in Triton."
authors = [
    { name = "Muhammad Awad", email = "muhaawad@amd.com" },
    { name = "Muhammad Osama", email = "Muhammad.Osama@amd.com" },
    { name = "Brandon Potter", email = "Brandon.Potter@amd.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "requests",
    "mpi4py",
    "ruff"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]

[tool.ruff]
line-length = 120
exclude = [
    "csrc/finegrained_alloc/**",  # explicitly exclude all contents
    "**/*.ipynb"                  # match notebooks anywhere
]

[tool.ruff.lint]
select = ["E", "F", "W"] 
ignore = ["E501", "E701", "E731", "E741", "F841", "F401", "F811"]

[tool.ruff.format]
quote-style = "double"